--- a/.github/workflows/releasepdf.yml
+++ b/.github/workflows/releasepdf.yml
@@ -27,6 +27,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./journal.pdf
-          asset_name: journal.pdf
+          asset_path: ./journal_${{ github.ref }}.pdf
+          asset_name: journal_${{ github.ref }}.pdf
           asset_content_type: application/pdf
