--- a/.github/workflows/releasepdf.yml
+++ b/.github/workflows/releasepdf.yml
@@ -6,6 +6,9 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v2
+      - name: Set outputs # get short sha for tagging https://stackoverflow.com/questions/59810838/how-to-get-the-short-sha-for-the-github-workflow
+        id: vars
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
@@ -16,8 +19,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.sha }}
-          release_name: Release ${{ github.sha }}
+          tag_name: ${{ steps.vars.outputs.sha_short }}
+          release_name: Release ${{ steps.vars.outputs.sha_short }}
           draft: false
           prerelease: false
       - name: Upload Release Asset
