--- a/.github/workflows/releasepdf.yml
+++ b/.github/workflows/releasepdf.yml
@@ -1,4 +1,4 @@
-name: Build LaTeX document
+name: Build PDF from LaTeX document and upload to release
 on: [push]
 jobs:
   build_latex:
@@ -6,6 +6,9 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v2
+      - name: Set outputs # get short sha for tagging https://stackoverflow.com/questions/59810838/how-to-get-the-short-sha-for-the-github-workflow
+        id: vars
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
@@ -16,8 +19,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ steps.vars.outputs.sha_short }}
+          release_name: Release ${{ steps.vars.outputs.sha_short }}
           draft: false
           prerelease: false
       - name: Upload Release Asset
@@ -27,6 +30,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./journal_${{ github.ref }}.pdf
-          asset_name: journal_${{ github.ref }}.pdf
+          asset_path: ./journal.pdf
+          asset_name: journal.pdf
           asset_content_type: application/pdf
